# patient-motion-emulator

./: .gitignore  CMakeLists.txt  ControlWindow.py  Parameter.py  README.md  TrajectoryPlanner.py  TrajectoryUtils.py  Utils.py  control_patient_motion.py  gimbal_control.py  keyboard_gimbal_control.py  keyboard_head_eye_control.py  main.py  main_eye_rotation.py  main_head_rotation.py  main_linear.py  main_motion_for_loop.py  requirements.txt
config/: parameters.yaml
eye_motion_profile/: 20260604_bells.csv  20260604_bells.yaml  20260604_saccadic.csv  20260604_saccadic.yaml  20260618_OD_bells.csv  20260618_OD_bells.yaml  20260618_OD_saccadic.csv  20260618_OD_saccadic.yaml  20260628_OD_ocular_drift_inferior.csv  20260628_OD_ocular_drift_nasal.csv  20260628_OD_ocular_drift_superior.csv  20260628_OD_ocular_drift_superior.yaml  20260628_OD_ocular_drift_temporal.csv  20260628_OD_ocular_drift_temporal.yaml
head_motion_profile/: 01_rest.txt  01_rest_2.txt  06_verbal_consent.txt  08_cough.txt  09_clear_throats.txt  10_heavy_swallowing.txt  brando_fast_head_motion.txt  flore_cough.txt  rohit_fast_head_motion.txt  rohit_rest.txt
include/: control_window.h  meca_client.h  parameter.h  utils.h
scripts/: ControlWindow.py  Parameter.py  RockerToggle.py  dynamixel_motor_control.py  main.py
src/: Utils.py  control_window.cpp  main.cpp  main.py  meca500_client.cpp  utils.cpp
